@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2006)
   - Fixed the following bug reports on SourceForge:
+      1476212: Conflict check with repeating events and DST
       1428140: 'top-menue' - truncated using IE6
       1496308: error message regarding 'cachedir'
       1490641: 'Reports' out by 2 weeks
